name:		     ivorylang-org
version:             0.1.0.0
synopsis:            ivorylang.org website
description:         static site generator based on hakyll, with some custom
                     site nav features that are really a bad hack
license:             BSD3
license-file:        LICENSE
author:              Pat Hickey
maintainer:          pat@galois.com
copyright:           2014 (c) Galois, Inc.
build-type:          Simple
cabal-version:       >=1.8

executable ivorylang-org
  main-is: site.hs
  other-modules: Sidebar
  build-depends: base,
                 MissingH,
                 filepath,
                 hakyll
